--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_course
+name: flutter_assignment1
 description: A new Flutter project.
 
 dependencies:
@@ -8,7 +8,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
-
+environment:
+  sdk: ">=2.11.0 <3.0.0"
 dev_dependencies:
   flutter_test:
     sdk: flutter
